new project added

--- a/src/Container/Work/Work.scss
+++ b/src/Container/Work/Work.scss
@@ -58,6 +58,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-top: 2rem;
   .app__work-item {
     width: 40%;
     flex-direction: column;
