added all classnames and ids as per masai platform

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -83,7 +83,7 @@
             margin-bottom: 5px;
         }
 
-        a{
+        a,p{
             color:#eaebea;
             text-decoration: none;
             flex-direction: column;
