css : resume button  mobile view fixed

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -167,7 +167,7 @@
             li{
                 margin: 1rem;
 
-                a{
+                a,p{
                     color:#eaebea;
                     text-decoration: none;
                     font-size: 1rem;
