--- a/src/Container/Contact/Contact.scss
+++ b/src/Container/Contact/Contact.scss
@@ -4,12 +4,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #0c0e0c;
-  background: linear-gradient(
-    109.6deg,
-    rgba(0, 0, 0, 0.93) 11.2%,
-    rgb(63, 61, 61) 78.9%
-  );
+  background-color: var(--white-color);
  h2{
   margin-top: 5rem;
  }
