--- a/src/Container/Home/Home.scss
+++ b/src/Container/Home/Home.scss
@@ -1,6 +1,6 @@
 #home {
   position: relative;
-
+border: 1px solid silver;//
   .app__wrapper {
     padding: 0;
   }
@@ -56,7 +56,7 @@
   flex-direction: column;
   .typewriter {
     font-size: 2rem;
-    color: #eaebea;
+    color: var(--black-color);
     font-family: "Kalam", cursive;
     text-align: center;
     margin-top: 1rem;
@@ -74,10 +74,10 @@
     display: flex;
     flex-direction: row;
     width: 80%;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 20px rgba(42, 37, 37, 0.8);
     div {
       p {
-        color: #eaebea;
+        color: var(--black-color);
         font-family: "Kalam", cursive;
       }
       h1 {
