--- a/src/Container/Skills/Skills.scss
+++ b/src/Container/Skills/Skills.scss
@@ -44,6 +44,7 @@
     height: 90px;
     background-color: #fff;
     border-radius: 25%;
+    border: 1px dashed var(--gray-color);
     // clip-path: polygon(21% 0, 85% 0, 100% 0, 100% 83%, 83% 100%, 30% 100%, 0 100%, 0 17%);
     img {
       width: 50%;
