--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
-html,body{
+html,
+body {
   scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 3px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
@@ -16,54 +17,29 @@ html,body{
   border-radius: 10px;
 }
 
-.app {
-  background-color: var(--primary-color);
-  font-family: var(--font-base);
-  // scroll-behavior: smooth;
-}
-
-.app__whitebg {
-  // background-color: #0c0e0c;
-  // background: linear-gradient(
-  //   109.6deg,
-  //   rgba(0, 0, 0, 0.93) 11.2%,
-  //   rgb(63, 61, 61) 78.9%
-  // );
-  background-color: white;
-}
-
-.app__primarybg {
-  // background-color: #0c0e0c;
-  // background: linear-gradient(
-  //   109.6deg,
-  //   rgba(0, 0, 0, 0.93) 11.2%,
-  //   rgb(63, 61, 61) 78.9%
-  // );
-  background-color: white;
-}
-
 .app__container {
   width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: row;
+  background-color: var(--black-color);
 }
 
 .app__flex {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media screen and (max-width: 768px) {
+    p {
+      font-size: 0.8rem;
+    }
+  }
 }
 
 .app__wrapper {
   flex: 1;
-  width: 100%;
   flex-direction: column;
-  padding: 4rem 2rem;
-
-  @media screen and (max-width: 450px) {
-    padding: 4rem 1rem 2rem;
-  }
 }
 
 .copyright {
@@ -76,37 +52,30 @@ html,body{
 
   p {
     text-transform: uppercase;
-    color: var(--black-color);
+    color: var(--white-color);
   }
 }
 
 .head-text {
-  font-size: 2.75rem;
-  font-weight: 800;
+  font-size: 4rem;
+  font-weight: 400;
   text-align: center;
-  // color: var(--black-color);
-  color: #000000;
+  color: var(--white-color);
   text-transform: capitalize;
 
   span {
-    color: var(--secondary-color);
-    color: #d8323c;
+    color: var(--white-color);
+    color: var(--white-color);
   }
-
-  @media screen and (min-width: 2000px) {
-    font-size: 4rem;
-  }
-
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: 768px) {
     font-size: 2rem;
   }
 }
 
 .p-text {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   text-align: left;
-  // color: var(--gray-color);
-  color: var(--black-color);
+  color: var(--white-color);
   line-height: 1.5;
 
   @media screen and (min-width: 2000px) {
@@ -135,7 +104,7 @@ html,body{
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
-
+  background-color: var(--black-color);
   padding: 1rem;
 
   div {
@@ -165,19 +134,20 @@ html,body{
     svg {
       width: 15px;
       height: 15px;
-      color: var(--gray-color);
+      color: var(--primary);
     }
 
     &:hover {
-      background-color: var(--secondary-color);
-      border-color: var(--secondary-color);
+      background-color: var(--white-color);
+      border-color: var(--white-color);
 
       svg {
         color: var(--white-color);
       }
     }
 
-    @media screen and (min-width: 2000px) {
+    @media screen and (max-width: 768px) {
+      display: none;
       width: 70px;
       height: 70px;
 
@@ -219,13 +189,37 @@ html,body{
     transition: background-color 0.2s ease-in-out;
 
     &:hover {
-      background-color: #d8323c;
+      background-color: var(--white-color);
     }
 
     @media screen and (min-width: 2000px) {
       width: 20px;
       height: 20px;
     }
+  }
+}
+
+.glassy-btn,
+.glassy-link {
+  position: relative;
+  display: inline-block;
+  padding: 0.8rem 1.2rem;
+  border-radius: 12px;
+  background: var(--glass-bg);
+  color: var(--text-light);
+  font-size: 1rem;
+  letter-spacing: 0.5px;
+  font-weight: 500;
+  text-decoration: none;
+  border: 1px solid var(--glass-border);
+  backdrop-filter: blur(10px) saturate(150%);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  transition: all 0.3s ease;
+  cursor: pointer;
+
+  @media screen and (max-width: 768px) {
+    padding: 0.5rem;
   }
 }
 
