--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,192 +1,105 @@
-.app__navbar{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    background: #0e0c0e;
-    backdrop-filter: blur(4px);
-    border: 1px solid rgba(255,255,255, 0.18);
-    position:fixed;
-    z-index: 2;
-    
+.app__navbar {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 2rem;
+  background: var(--primary);
+  backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  position: fixed;
+  top: 10;
+  left: 50%;
+  transform: translate(-50%, 10px);
+  border-radius: 50px;
+  z-index: 2;
+
+  @media screen and (max-width: 768px) {
+    width: 90%;
+    height: 60px;
+    padding: 0.5rem;
+    bottom: 20px;
+  }
 }
 
-.app__navbar-logo{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    transition: all 3s ease-in;
-    span{
-        font-size: 1.5rem;
-        text-align: left;
-        font-family:'Kalam', cursive;
-        color:white;
-        @media screen and (max-width:1024px) {
-            font-family:'Kalam', cursive;
-            
-        }
-    }
+.app__navbar-logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-family: 'Dancing Script', cursive;
+  font-weight: 400;
+  font-size: 2rem;
+  color: var(--white-color);
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
-.app__navbar-logo span {
-    display: inline-block;
-    animation: wave-text 2s ease-in-out infinite;
+.app__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  li {
+    margin: 0 1rem;
+    cursor: pointer;
+    flex-direction: column;
+
+    div {
+      width: 5px;
+      height: 5px;
+      background: transparent;
+      border-radius: 50%;
+      margin-bottom: 5px;
+    }
+
+    a,
+    p {
+      color: #eaebea;
+      text-decoration: none;
+      flex-direction: column;
+      text-transform: uppercase;
+      font-weight: 500;
+      transition: all 0.3s ease-in-out;
+      font-size: 0.8rem;
+
+      &:hover {
+        color: var(--white-color);
+        transform: scale(1.1);
+        translate: all 0.3s ease-in-out;
+      }
+    }
+
+    &:hover {
+      div {
+        background: var(--white-color);
+      }
+    }
   }
-  
-  .app__navbar-logo {
-    span:nth-of-type(1){ animation-delay: 0.0s; }
-    span:nth-of-type(2){ animation-delay: 0.1s; }
-    span:nth-of-type(3){ animation-delay: 0.2s; }
-    span:nth-of-type(4){ animation-delay: 0.3s; }
-    span:nth-of-type(5){ animation-delay: 0.4s; }
-    span:nth-of-type(6){ animation-delay: 0.5s; }
-    span:nth-of-type(7){ animation-delay: 0.6s; }
-    span:nth-of-type(8){ animation-delay: 0.7s; }
-    span:nth-of-type(9){ animation-delay: 0.8s; }
-    span:nth-of-type(10){ animation-delay: 0.9s; }
-    span:nth-of-type(11){ animation-delay: 1s; }
-    span:nth-of-type(12){ animation-delay: 1.1s; }
-    span:nth-of-type(13){ animation-delay: 1.2s; }
 
+  @media screen and (max-width: 999px) {
+    display: none;
   }
-  
-  @keyframes wave-text{
-    0%{
-      transform: translateX(0em);
-    }
-    
-    50%{
-      transform: translateX(0.3em);
-    }
-    100%{
-      transform: translateX(0em);
-    }
-  }
-  
-
-.app__navbar-links{
-    flex :1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    li{
-        margin: 0 1rem;
-        cursor : pointer;   
-        flex-direction: column;
-        div{
-            width:5px;
-            height: 5px;
-            background: transparent ;
-            border-radius: 50%;
-            margin-bottom: 5px;
-        }
-
-        a,p{
-            color:#eaebea;
-            text-decoration: none;
-            flex-direction: column;
-            text-transform: uppercase;
-            font-weight: 500;
-            transition: all 0.3s ease-in-out;
-            font-family: 'Kalam', cursive;
-            font-size: 1rem;
-
-            &:hover{
-                color:#d8323c;
-            }
-        }
-    
-
-        &:hover{
-            div{
-                background: var(--secondary-color); 
-            }
-        }
-    }
-
-    @media screen and (max-width:999px) {
-        display: none;
-    }
 }
 
-.app__navbar-menu{
-    width:35px;
-    height:35px;
-    border-radius: 50%;
-    position: relative;
+.app__navbar_mob-links {
+  display: none;
+
+  @media screen and (max-width: 768px) {
+    width: 90vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    background: var(--secondary-color);
+    li {
+      list-style: none;
 
-    svg{
-        width:70%;
-        height: 70%;
-        color:var(--white-color);
-
+      svg {
+        width: 20px;
+        height: 20px;
+      }
     }
+  }
+}
 
-    div{    
-        position: fixed;
-        top:0;
-        bottom: 0;
-        right: 0;
-        z-index: 5;
-        padding:1rem;
-        width:80%;
-        height:100vh;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-        flex-direction: column;
-        background-color: #0e0c0e;
-        background-size: cover;
-        background-repeat: repeat;
-        box-shadow: 0 0 20px rgba(168,168,168,0.15);
 
-        svg{
-            width:35px;
-            height: 35px;
-            color:var(--secondary-color);
-            margin: 0.5rem 1rem;
-        }
-
-        ul{
-            list-style: none;
-            margin : 0;
-            padding: 0;
-            height: 100%;
-            width:100%;
-            display: flex;
-            justify-content: flex-start;
-            align-items: flex-start;
-            flex-direction: column;
-
-            li{
-                margin: 1rem;
-
-                a,p{
-                    color:#eaebea;
-                    text-decoration: none;
-                    font-size: 1rem;
-                    text-transform: uppercase;
-                    font-weight: 500;
-                    transition: all 0.3s ease-in-out;
-                    font-family:'Kalam', cursive;
-                    &:hover{
-                        color:#d8323c   ;
-                    }
-                }
-                }
-            }
-            @media screen and (min-width:999px) {
-                display: none;
-            }
-        }
-        
-            @media screen and (min-width:999px) {
-                display: none;
-            }
-    }
