--- a/src/Container/Contact/Contact.scss
+++ b/src/Container/Contact/Contact.scss
@@ -1,89 +1,53 @@
 .app__footer {
   width: 100%;
+  height: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: var(--white-color);
- h2{
   margin-top: 5rem;
- }
+  h2 {
+    margin-top: 5rem;
+    @media screen and (max-width: 768px) {
+      margin-top: 0rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    margin-top: 0;
+  }
 }
 
-.app__footer-card {
-  width: 90%;
+.app__footer_icon {
+  width: 50px;
+  height: 50px;
   display: flex;
-  flex-direction: row;
+  padding: 0.5rem;
   justify-content: center;
   align-items: center;
-
-  margin: 0.5rem auto;
-  padding: 1rem;
   border-radius: 10px;
-  cursor: pointer;
-  background-color: #fef4f5;
-
-  transition: all 0.3s ease-in-out;
-
-  img {
-    width: 40px;
-    height: 40px;
-    margin: 0 0.7rem;
-  }
-
-  p {
-    font-weight: 600;
-  }
-
-  a {
-    text-decoration: none;
-    font-weight: 5 00;
-  }
+  background: white;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
 
   &:hover {
-    box-shadow: 0 0 12px #fef4f5;
+    scale: 1.2;
+    transition: all 0.5s ease-in;
   }
 
-  @media screen and (max-width: 450px) {
-    width: 100%;
+  @media screen and (max-width: 768px) {
+    height: 40px;
+    width: 40px;
   }
 }
 
-.app__footer-cards .app__footer-card:last-child {
-  background-color: var(--white-color);
-}
+.heading {
+  display: none;
 
-form {
-  display: flex;
-  flex-direction: column;
-  input,
-  textarea {
-    width: 100%;
-    border: none;
-    border-radius: 7px;
-    background-color: var(--white-color);
-    font-family: var(--font-base);
-    color: var(--secondary-color);
-    outline: none;
+  @media screen and (max-width: 768px) {
+    display: inline;
+    color: white;
+    font-size: 2.5rem;
+    text-align: center;
     margin-bottom: 1rem;
-    padding: 0.5rem;
   }
-
-  input[type="submit"] {
-    background-color: var(--secondary-color);
-    color: white;
-    width: 50%;
-    margin-inline: auto;
-    margin-bottom: 0;
-    padding: 0;
-  }
-
-  label {
-    color: white;
-    margin-top: 0.5rem;
-  }
-}
-input {
-  height: 2.5rem;
-  padding: 1rem;
 }
