--- a/src/Container/Projects/Projects.scss
+++ b/src/Container/Projects/Projects.scss
@@ -1,12 +1,3 @@
-.app__work {
-  flex: 1;
-  width: 100%;
-  flex-direction: column;
-  @media screen and (max-width: 768px) {
-    border: 1px solid silver;
-  }
-}
-
 .app__projects_main {
   justify-content: center;
   align-items: center;
@@ -20,8 +11,13 @@
 }
 
 .heading {
-  color: white;
-  font-size: 2.5rem;
-  text-align: center;
-  margin-bottom: 1rem;
+  display: none;
+  @media screen and (max-width: 768px) {
+    display: block;
+    color: white;
+    font-size: 2.5rem;
+    margin-top: 10vw;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 }
