--- a/src/Container/Skills/Skills.scss
+++ b/src/Container/Skills/Skills.scss
@@ -10,26 +10,30 @@
   margin-top: 9rem;
 
   @media screen and (max-width: 768px) {
-    height: 90vh;
+    height: 90%;
     margin-top: 0;
   }
 }
 
-.head-text {
+.heading {
+  display: none;
   @media screen and (max-width: 768px) {
-    display: none;
+    display: block;
+    color: white;
+    font-size: 2.5rem;
+    margin-top: -10vw;
+    text-align: center;
+    margin-bottom: 1rem;
   }
 }
 
 .app__skills-container {
   width: 80%;
-  // margin: 3rem auto 0 auto;
   display: flex;
   flex-direction: row;
   margin-top: -10vh;
   @media screen and (max-width: 768px) {
-    width: 100%;
-    flex-direction: column;
+    width: 90vw;
   }
 }
 
@@ -42,8 +46,9 @@
   margin: auto;
 
   @media screen and (max-width: 768px) {
-    margin-right: 0;
     margin: 0;
+    margin-right: 0;
+    margin-top: 10vh;
     justify-content: center;
     align-items: center;
   }
@@ -95,11 +100,4 @@
       margin-top: 1rem;
     }
   }
-}
-
-.heading {
-  color: white;
-  font-size: 2.5rem;
-  text-align: center;
-  margin-bottom: 1rem;
 }
