--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: row;
+  font-family: "Manrope", sans-serif;
   background-color: var(--black-color);
 }
 
@@ -29,7 +30,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  font-family: "Manrope", sans-serif;
   @media screen and (max-width: 768px) {
     p {
       font-size: 0.8rem;
