--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -13,6 +13,7 @@
   transform: translate(-50%, 10px);
   border-radius: 50px;
   z-index: 2;
+  font-family: 'Manrope', sans-serif;
 
   @media screen and (max-width: 768px) {
     width: 90%;
@@ -52,6 +53,11 @@
       background: transparent;
       border-radius: 50%;
       margin-bottom: 5px;
+
+      &:hover {
+        scale: 1.2;
+        transition: all 0.3s ease-in;
+      }
     }
 
     a,
