--- a/src/Components/Carousel.scss
+++ b/src/Components/Carousel.scss
@@ -17,7 +17,11 @@
     justify-content: center;
     align-items: center;
     margin-left: 30px;
-    @media screen and (max-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1024px) {
+      height: 50vh;
+    }
+
+    @media screen and (max-width: 767px) {
       width: 90vw;
       height: 30vh;
       margin-left: 0;
@@ -41,7 +45,7 @@
     border-radius: 10px;
     transition: all 0.4s ease;
     transform: scale(0.8); // default size for non-active slides
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       height: 30%;
     }
   }
@@ -56,7 +60,7 @@
     background-color: var(--primary);
     border-radius: 10px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       height: max-content;
       width: 90%;
       margin-right: 0;
@@ -98,7 +102,7 @@
     justify-content: flex-start;
     align-items: flex-start;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       padding: 0.5rem;
       height: fit-content;
     }
@@ -129,7 +133,7 @@
     transform: scale(1.2);
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     height: 80vh;
     margin-top: 0;
     flex-direction: column-reverse;
@@ -144,6 +148,10 @@
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 1rem;
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  font-size: 2rem;       
+}
 
   svg:first-child {
     margin-right: 10px;
