--- a/src/Container/Skills/Skills.scss
+++ b/src/Container/Skills/Skills.scss
@@ -12,6 +12,8 @@
   @media screen and (max-width: 767px) {
     height: 90%;
     margin-top: 0;
+    justify-content: flex-start;
+    align-items: center;
   }
 }
 
@@ -21,9 +23,8 @@
     display: block;
     color: white;
     font-size: 2.5rem;
-    margin-top: -10vw;
+    margin-top: -20vh;
     text-align: center;
-    margin-bottom: 1rem;
   }
 }
 
@@ -33,7 +34,8 @@
   flex-direction: row;
   margin-top: -10vh;
   @media screen and (max-width: 767px) {
-    width: 90vw;
+    width: 90%;
+    margin-top: 3rem;
   }
 }
 
@@ -46,9 +48,6 @@
   margin: auto;
 
   @media screen and (max-width: 767px) {
-    margin: 0;
-    margin-right: 0;
-    margin-top: 10vh;
     justify-content: center;
     align-items: center;
   }
