--- a/src/Container/Projects/Projects.scss
+++ b/src/Container/Projects/Projects.scss
@@ -12,12 +12,13 @@
 
 .heading {
   display: none;
-  @media screen and (max-width: 767px) {
-    display: block;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    display: inline-block;
     color: white;
     font-size: 2.5rem;
-    margin-top: 10vw;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-block: 1rem;
   }
 }
